Poprawione kodowanie, teraz się "kompiluje"

--- a/szablon-sprawozdania/_tytulowa.tex
+++ b/szablon-sprawozdania/_tytulowa.tex
@@ -6,9 +6,9 @@ Metaheurystyki i Obliczenia Inspirowane Biologicznie}}
 
 \vspace{3ex}
 
-Czêœæ I: Algorytmy optymalizacji lokalnej, problem QAP
-%Czêœæ II: Algorytmy optymalizacji lokalnej i globalnej, problem QAP
-%Czêœæ III: Eksperyment: ... (prezentacjê mo¿na zrobiæ w LaTeX/klasa beamer)
+CzÄ™Å›Ä‡ I: Algorytmy optymalizacji lokalnej, problem QAP
+%CzÄ™Å›Ä‡ II: Algorytmy optymalizacji lokalnej i globalnej, problem QAP
+%CzÄ™Å›Ä‡ III: Eksperyment: ... (prezentacjÄ™ moÅ¼na zrobiÄ‡ w LaTeX/klasa beamer)
 
 \vspace{3ex}
 {\footnotesize\today}
@@ -18,7 +18,7 @@ Czêœæ I: Algorytmy optymalizacji lokalnej, problem QAP
 
 \vspace{10ex}
 
-Prowadz¹cy: dr in¿. Maciej Komosiñski
+ProwadzÄ…cy: dr inÅ¼. Maciej KomosiÅ„ski
 
 \vspace{5ex}
 
@@ -30,7 +30,7 @@ Autorzy:
 
 \vspace{5ex}
 
-Zajêcia poniedzia³kowe, 11:00.
+ZajÄ™cia poniedziaÅ‚kowe, 11:00.
 
 
 \newpage
