--- a/szablon-sprawozdania/_ustawienia.tex
+++ b/szablon-sprawozdania/_ustawienia.tex
@@ -1,4 +1,4 @@
-% Zmiana rozmiarÛw strony tekstu
+% Zmiana rozmiar√≥w strony tekstu
 \addtolength{\voffset}{-1cm}
 \addtolength{\hoffset}{-1cm}
 \addtolength{\textwidth}{2cm}
@@ -16,7 +16,7 @@
 \setcounter{totalnumber}{20}
 \setcounter{dbltopnumber}{9}
 
-% w≥asny bullet list z malymi odstepami
+% w≈Çasny bullet list z malymi odstepami
 \newenvironment{tightlist}{
 \begin{itemize}
   \setlength{\itemsep}{1pt}
