Changed name of package 'utf8' to lowercase, so it could be properly reckognized by linux.

--- a/sprawozdanie1/sprawozd.tex
+++ b/sprawozdanie1/sprawozd.tex
@@ -1,6 +1,6 @@
 \documentclass{article}
 \usepackage{polski} %moze wymagac dokonfigurowania latexa, ale jest lepszy niż standardowy babel'owy [polish] 
-\usepackage[UTF8]{inputenc} 
+\usepackage[utf8]{inputenc} 
 \usepackage[OT4]{fontenc} 
 \usepackage{graphicx,color} %include pdf's (and png's for raster graphics... avoid raster graphics!) 
 \usepackage{url} 
