Made small changes in the front page.

--- a/sprawozdanie1/_tytulowa.tex
+++ b/sprawozdanie1/_tytulowa.tex
@@ -2,11 +2,12 @@
 
 \begin{center}
 {\large{Sprawozdanie z laboratorium:\\
-Uczenie MAszynowe i Sieci Neuronowe}}
+Uczenie Maszynowe i Sieci Neuronowe}}
 
 \vspace{3ex}
 
 Część I: Generowanie drzew decyzyjnych
+
 Część II: Generowanie reguł decyzyjnych
 
 
@@ -30,9 +31,7 @@ Autorzy:
 
 \vspace{5ex}
 
-Krzysztof: zajęcia poniedziałkowe, 16:50
-Tomek: zajęcia poniedziałkowe, 13:30
-
+Zajęcia poniedziałkowe; Krzysztof: 16:50, Tomasz: 13:30
 
 \newpage
 
