--- a/sprawozdanie1/_ustawienia.tex
+++ b/sprawozdanie1/_ustawienia.tex
@@ -21,7 +21,7 @@
 \begin{itemize}
   \setlength{\itemsep}{1pt}
   \setlength{\parskip}{0pt}
-  \setlength{\parsep}{0pt}}
-{\end{itemize}}
+  \setlength{\parsep}{0pt}
+\end{itemize}}
 
 
