--- a/sprawozdanie1/sprawozd.tex
+++ b/sprawozdanie1/sprawozd.tex
@@ -20,13 +20,28 @@
 \subsection{Generowanie drzewa}
 
 \begin{itemize}
-\item Obejrzyj zawartość plików \emph{golf.nam}, \emph{golf.dat} i~\emph{golf.tst}; ile przykładów zawiera zbiór uczący? Iloma atrybutami są~one opisane?
-\item Wygeneruj drzewo dla zbioru przykładów \emph{golf}; ustawienia standardowe.
-\item Przeanalizuj wyniki; czy udało się przeprowadzić pruning?
-\item Obejrzyj drzewo; ile ma węzłów decyzyjnych, a~ile liści?
-\item Prześledź ścieżkę od korzenia do wybranego liścia.
-\item Porównaj estymaty błędu dla drzewa oryginalnego (\emph{Unpruned}) i~uproszczonego (\emph{Pruned}).
-\item Obejrzyj macierz pomyłek.
+\item \textbf{Obejrzyj zawartość plików \emph{golf.nam}, \emph{golf.dat} i~\emph{golf.tst}; ile przykładów zawiera zbiór uczący? Iloma atrybutami są~one opisane?}
+	\\Zbiór uczący zawiera 14 przykładów. Są one opisane pięcioma atrybutami, w tym jednym atrybutem decyzyjnym.
+
+\item \textbf{Wygeneruj drzewo dla zbioru przykładów \emph{golf}; ustawienia standardowe.}
+	\begin{center}\includegraphics[width=1\textwidth]{drzewo.png}\end{center}
+
+\item \textbf{Przeanalizuj wyniki; czy udało się przeprowadzić pruning?}
+	\\Nie udało się przeprowadzić pruningu. Drzewa są identyczne.
+
+\item \textbf{Obejrzyj drzewo; ile ma węzłów decyzyjnych, a~ile liści?}
+	\\Wygenerowane drzewo ma 3 węzły decyzyjne i 5 liści.
+
+\item \textbf{ Prześledź ścieżkę od korzenia do wybranego liścia.
+}		\\Korzeń jest węzłem związanym z atrybutem outlook. Jeśli dla klasyfikowanego przykładu wartość atrybutu outlook wynosi "sunny", to następny węzeł na ścieżce to ten związany z atrybutem humidity. Zakłądając, że dla naszego przykładu wilgotność jest większ niż $ 75\% $ , liściem w analizowanej ścieżce będzie liść odnoszący się decyzji "Don't Play".
+		\\Inaczej mówiąc, ścieżk ta klasyfikuje wszystkie dni w które jest słoneczna pogoda i wilgotność większa niż $ 75\% $ jako dni, w które nie gra się w golfa.
+		
+\item \textbf{Porównaj estymaty błędu dla drzewa oryginalnego (\emph{Unpruned}) i~uproszczonego (\emph{Pruned}).}
+	\\Estymata błędu dla oryginalnego drzewa wynosi  $ 0\% $ a dla uproszczonego $ 38,5\% $ .
+
+\item \textbf{Obejrzyj macierz pomyłek.}
+	\\Ponieważ drzewo oryginalne nie generuje błędów dla zbioru uczącego to też jedyne co możemy z niego odczytać, to właśnie, że żadne obiekty nie są błędnie klasyfikowane, oraz że w przypadku 9 przykładów drzewo poprawnie zaklasyfikowało przykłądy do klasy "Play" a w 5 przypadkach do klasy "Don't Play".
+
 \end{itemize}
 
 \subsection{Konsultowanie}
