--- a/sprawozdanie1/sprawozd.tex
+++ b/sprawozdanie1/sprawozd.tex
@@ -183,6 +183,91 @@ Powyższe drzewo nie może być odtworzone przy użyciu samych tylko uzyskanych 
 
 \begin{itemize}
 \item Przeprowadź testy \emph{10-fold CV} na wybranych zbiorach dla drzew i~reguł.
+
+
+\emph{Cross-validation} dla zbioru \emph{golf}:\\\\
+\begin{tabular}{|r||r|r|r||r|r|r|r|}
+\hline
+&\multicolumn{3}{1||}{Before pruning}&\multicolumn{4}{1|}{After pruning} \\
+\hline
+Tree  & Size & Errors        & Errors (test)  & Size & Errors        & Errors (test)  & Estimate \\
+\hline\hline
+    1 &    8 &    0 (0.0\%)  &    0 (0.0\%)   &    8 &    0 (0.0\%)  &    0 (0.0\%)   &  43.5\%  \\
+    2 &    8 &    0 (0.0\%)  &    1 (50.0\%)  &    8 &    0 (0.0\%)  &    1 (50.0\%)  &  43.1\%  \\
+    3 &    6 &    2 (16.7\%) &    1 (50.0\%)  &    1 &    4 (33.3\%) &    1 (50.0\%)  &  47.5\%  \\
+    4 &    6 &    1 (8.3\%)  &    1 (50.0\%)  &    6 &    1 (8.3\%)  &    1 (50.0\%)  &  44.5\%  \\
+    5 &    6 &    1 (7.7\%)  &    1 (100.0\%) &    6 &    1 (7.7\%)  &    1 (100.0\%) &  42.1\%  \\
+    6 &    8 &    0 (0.0\%)  &    0 (0.0\%)   &    8 &    0 (0.0\%)  &    0 (0.0\%)   &  41.0\%  \\
+    7 &    8 &    0 (0.0\%)  &    0 (0.0\%)   &    8 &    0 (0.0\%)  &    0 (0.0\%)   &  41.0\%  \\
+    8 &    8 &    0 (0.0\%)  &    0 (0.0\%)   &    8 &    0 (0.0\%)  &    0 (0.0\%)   &  40.6\%  \\
+    9 &    8 &    0 (0.0\%)  &    0 (0.0\%)   &    8 &    0 (0.0\%)  &    0 (0.0\%)   &  40.6\%  \\
+   10 &    6 &    1 (7.7\%)  &    1 (100.0\%) &    6 &    1 (7.7\%)  &    1 (100.0\%) &  42.1\%  \\
+\hline\hline
+ Avg. &  7.2 &  0.5 (4.0\%)  &  0.5 (35.0\%) &  6.7 &  0.7 (  5.7\%) &  0.5 ( 35.0\%) &  42.6\%  \\
+\hline
+\end{tabular}
+
+\begin{tabular}{|r|r|r|r|}
+\hline
+ Ruleset & Size & Errors        & Errors (test) \\
+\hline\hline
+       1 &    2 &    0 (0.0\%)  &    0 (0.0\%)   \\
+       2 &    3 &    0 (0.0\%)  &    1 (50.0\%)  \\
+       3 &    1 &    4 (33.3\%) &    1 (50.0\%)  \\
+       4 &    3 &    1 (8.3\%)  &    2 (100.0\%) \\
+       5 &    4 &    1 (7.7\%)  &    1 (100.0\%) \\
+       6 &    4 &    0 (0.0\%)  &    0 (0.0\%)   \\
+       7 &    4 &    0 (0.0\%)  &    0 (0.0\%)   \\
+       8 &    3 &    0 (0.0\%)  &    0 (0.0\%)   \\
+       9 &    3 &    0 (0.0\%)  &    0 (0.0\%)   \\
+      10 &    2 &    1 (7.7\%)  &    1 (100.0\%) \\
+\hline\hline
+    Avg. &  2.9 &  0.7 (5.7\%)  &  0.6 (40.0\%)  \\
+\hline
+\end{tabular}
+
+
+\emph{Cross-validation} dla zbioru \emph{vote}:\\\\
+\begin{tabular}{|r||r|r|r||r|r|r|r|}
+\hline
+&\multicolumn{3}{1||}{Before pruning}&\multicolumn{4}{1|}{After pruning} \\
+\hline
+Tree  & Size & Errors       & Errors (test) & Size & Errors       & Errors (test) & Estimate \\
+\hline\hline
+    1 &   25 &    7 (2.6\%) &    4 (13.3\%) &    7 &   12 (4.4\%) &    1 (3.3\%)  &   7.3\%  \\
+    2 &   25 &    7 (2.6\%) &    1 (3.3\%)  &    7 &   12 (4.4\%) &    1 (3.3\%)  &   7.2\%  \\
+    3 &   16 &    9 (3.3\%) &    0 (0.0\%)  &    7 &   13 (4.8\%) &    0 (0.0\%)  &   7.7\%  \\
+    4 &   19 &   10 (3.7\%) &    1 (3.3\%)  &    7 &   13 (4.8\%) &    0 (0.0\%)  &   7.7\%  \\
+    5 &   16 &    8 (3.0\%) &    1 (3.3\%)  &    7 &   11 (4.1\%) &    2 (6.7\%)  &   6.9\%  \\
+    6 &   16 &    8 (3.0\%) &    4 (13.3\%) &    7 &   11 (4.1\%) &    2 (6.7\%)  &   6.9\%  \\
+    7 &   31 &    5 (1.9\%) &    4 (13.3\%) &    4 &   13 (4.8\%) &    2 (6.7\%)  &   7.0\%  \\
+    8 &   28 &    5 (1.9\%) &    4 (13.3\%) &    4 &   12 (4.4\%) &    3 (10.0\%) &   6.6\%  \\
+    9 &   16 &    7 (2.6\%) &    2 (6.7\%)  &    7 &   11 (4.1\%) &    2 (6.7\%)  &   6.8\%  \\
+   10 &   13 &    8 (3.0\%) &    3 (10.0\%) &    7 &   11 (4.1\%) &    2 (6.7\%)  &   6.8\%  \\
+\hline\hline
+ Avg. & 20.5 &  7.4 (2.8\%) &  2.4 (8.0\%)  &  6.4 & 11.9 (4.4\%) &  1.5 (5.0\%)  &   7.1\%  \\
+\hline
+\end{tabular}
+
+\begin{tabular}{|r|r|r|r|}
+\hline
+ Ruleset & Size & Errors       & Errors (test) \\
+\hline\hline
+       1 &    4 &   12 (4.4\%) &    1 (3.3\%)  \\
+       2 &    3 &   12 (4.4\%) &    1 (3.3\%)  \\
+       3 &    5 &   11 (4.1\%) &    0 (0.0\%)  \\
+       4 &    4 &   13 (4.8\%) &    0 (0.0\%)  \\
+       5 &    5 &    9 (3.3\%) &    2 (6.7\%)  \\
+       6 &    4 &   11 (4.1\%) &    2 (6.7\%)  \\
+       7 &    4 &    7 (2.6\%) &    2 (6.7\%)  \\
+       8 &    4 &    9 (3.3\%) &    4 (13.3\%) \\
+       9 &    4 &    9 (3.3\%) &    2 (6.7\%)  \\
+      10 &    5 &    8 (3.0\%) &    3 (10.0\%) \\
+\hline\hline
+    Avg. &  4.2 & 10.1 (3.7\%) &  1.7 (5.7\%)  \\
+\hline
+\end{tabular}
+
 \item Porównaj wyniki pod kątem trafności klasyfikowania na zbiorze testującym oraz rozmiaru opisu.
 \item Przeprowadzając kilka eksperymentów uczenia i~testowania przeanalizuj wpływ parametrów \emph{Confidence Level} i~\emph{Redundancy Factor} na~otrzymywany zbiór reguł.
 \end{itemize}
